# practice_left

./: CMakeLists.txt  LICENSE  README.md  main.cpp  trainer_window.cpp  trainer_window.h
